fixed dialog background overlay flickering

--- a/dialog.styl
+++ b/dialog.styl
@@ -26,7 +26,7 @@ $animation_fn = cubic-bezier(0.550, 0.085, 0.680, 0.530)
   height 100vh
   width 100vw
 
-  background-color alpha(#000, 0.75)
+  background-color alpha(#000, 0)
 
 .carbm-dialog-buttonbar
   text-align right
